--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@ mysql-connector-python==9.1.0
 PyQt6==6.4.2
 pyqt6-plugins==6.4.2.2.3
 PyQt6-Qt6==6.4.3
-pyqt6-tools==6.4.2.3.3
+# pyqt6-tools==6.4.2.3.3
 PyQt6_sip==13.8.0
 python-dotenv==1.0.1
-qt6-applications==6.4.3.2.3
-qt6-tools==6.4.3.1.3
+# qt6-applications==6.4.3.2.3
+# qt6-tools==6.4.3.1.3
 requests==2.32.3
 soupsieve==2.6
 urllib3==2.2.3
